--- a/scbwisummer2017/wwwroot/css/site.css
+++ b/scbwisummer2017/wwwroot/css/site.css
@@ -1,4 +1,6 @@
-﻿.main {
-    margin: 0 auto;
-    padding: 20px;
+﻿@media screen and (min-width: 48em) {
+    .main {
+        margin: 0 auto;
+        padding: 20px;
+    }
 }
