--- a/scbwisummer2017/Views/Home/Index.cshtml
+++ b/scbwisummer2017/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
     <body>
         <div id="app"></div>
         <!-- Main -->
+        <input type="hidden" id="isloggedin" value="@User.Identity.IsAuthenticated.ToString()" />
         <script src="/js/bundle.js"></script>
     </body>
 </html>
